compiler/src/test/resources/golden/errors/list_bridge_nested.dawn
use java "java.lang.String"

pub fn main() -> Unit !io = {
  let nested = [["a"], ["b"]]
  println(String.join(" ", nested).expect("joined"))
}
