compiler/src/test/resources/golden/errors/list_bridge_nested.err
error: cannot bridge List[List[String]] to `Iterable`: element type List[String] does not cross
  --> list_bridge_nested.dawn:5:28
  |
5 |   println(String.join(" ", nested).expect("joined"))
  |                            ^^^^^^
  = hint: bridgeable elements: Int, Float, Bool, String, and Java classes; nested containers, ADTs, tuples and functions stay on the Dawn side (spec §9.6)
